# Neural-Networking

./: .gitignore  CMakeLists.txt  README.md
NeuralNetworking/: CMakeLists.txt
NeuralNetworking/source/: DLDomain.cpp  DLDomain.h  DeepLearning.cpp  DeepLearning.h  NeuralNetwork.cpp  NeuralNetwork.h
Othello/: CMakeLists.txt
Othello/source/: Othello.cpp  Othello.h  OthelloBoard.cpp  OthelloBoard.h  OthelloDLManager.cpp  OthelloDLManager.h  SearchTree.cpp  SearchTree.h
